<resources>
    <string name="app_name">OneilAssignment2</string>
    <string name="main_welcome_text">Welcome!</string>
    <string name="main_description_1">Enjoy this brand new\nsocial media experience for students!</string>
    <string name="main_description_2">Login to or register a new account</string>
    <string name="main_register_text">Register</string>
    <string name="main_login_text">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_title_text">Register for an account</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="login_title_text">Login to your account</string>
    <string name="email_text">Email</string>
    <string name="surname_text">Surname</string>
    <string name="first_name_text">First Name</string>
    <string name="date_of_birth_text">Date of Birth</string>
    <string name="logout_button_text">Logout Button</string>
    <string name="profile_button_text">Profile Button</string>
    <string name="activity_button_text">Activity Button</string>
    <string name="post_button_text">Post Button</string>
    <string name="direct_message_button_text">Direct Message Button</string>
    <string name="home_text">Home</string>
    <string name="comments_button_text">Comments Button</string>
    <string name="likes_button_text">Likes Button</string>
    <string name="textview">TextView</string>
    <string name="post_text">Post</string>
    <string name="caption_text">Caption</string>
    <string name="delete_student_text">Delete Student</string>
    <string name="add_new_student_text">Add New Student</string>
    <string name="update_student_info_text">Update Student Info</string>
    <string name="update_student_password_text">Update Student Password</string>
    <string name="administration_area_text">Administration Area</string>
    <string name="update_a_student_s_password_text">Update a student\'s password</string>
    <string name="update_text">Update</string>
    <string name="new_password_text">New Password</string>
    <string name="student_id_text">Student Id</string>
    <string name="update_a_student_s_information_text">Update a student\'s information</string>
    <string name="add_a_new_student_text">Add a new student</string>
    <string name="delete_text">Delete</string>
    <string name="delete_a_student_text">Delete a student</string>
    <string name="send_text">Send</string>
    <string name="add_a_new_comment_text">Add a new comment</string>
    <string name="comments_text">Comments</string>
    <string name="select_date_text">Select date</string>
    <string name="disabled_text">Disabled</string>
    <string name="enabled_text">Enabled</string>
    <string name="reset_your_password_text">Reset your password</string>
    <string name="old_password_text">Old password</string>
    <string name="confirm_text">Confirm</string>
    <string name="reset_text">Reset</string>
    <string name="reset_password_text">Reset Password</string>
    <string name="are_you_sure_you_want_to_delete_your_account_text">Are you sure you want to delete your account?</string>
    <string name="no_text">No</string>
    <string name="yes_text">Yes</string>
    <string name="toggle_dark_mode_text">Toggle Dark Mode</string>
    <string name="settings_text">Settings</string>
    <string name="delete_account_text">Delete Account</string>
    <string name="edit_post_text">Edit Post</string>
    <string name="edit_text">Edit</string>
    <string name="edit_your_caption_text">Edit your caption</string>
    <string name="new_caption_text">New Caption</string>
    <string name="add_text">Add</string>
    <string name="profile_text">Profile</string>
    <string name="enter_your_caption_text">Enter Your Caption</string>
    <string name="create_a_post_text">Create a post</string>
    <string name="image_of_a_school_text">Image of a school</string>
    <string name="an_image_of_the_like_button_for_a_comment_text">An image of the like button for a comment</string>
    <string name="the_image_of_the_dislike_button_for_a_comment_text">The image of the dislike button for a comment</string>
    <string name="image_of_back_button_text">Image of back button</string>
    <string name="logout_text">Logout</string>
    <string name="image_of_close_button_text">Image of close button</string>
    <string name="image_of_edit_post_button_text">Image of edit post button</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="edit_your_profile_text">Edit your profile</string>
    <string name="save_text">Save</string>
    <string name="likes_text">Likes</string>
    <string name="no_posts_text">No Posts</string>
    <string name="no_likes_text">No Likes</string>
    <string name="image_for_direct_message_button_text">Image for direct message button</string>
    <string name="chat_messages_text">Chat Messages</string>
    <string name="image_of_add_button_text">Image of add button</string>
    <string name="add_a_new_contact_text">Add a new contact</string>
    <string name="search_text">Search…</string>
    <string name="remove_contact_text">Remove Contact</string>
    <string name="message_text">Message</string>
    <string name="send_a_little_hello_to_your_new_friend_text">Send a little \'Hello!\' to your new friend!</string>
    <string name="no_results_text">No Results</string>
</resources>