<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AdminFragment">

        <Button
            android:id="@+id/admin_update_password_button"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:padding="10dp"
            android:text="@string/update_student_password_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/admin_add_student_button"
            app:layout_constraintEnd_toStartOf="@+id/admin_update_info_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/admin_update_info_button"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:padding="10dp"
            android:text="@string/update_student_info_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/admin_delete_student_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/admin_update_password_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/admin_add_student_button"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:padding="10dp"
            android:text="@string/add_new_student_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/admin_delete_student_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/admin_update_password_button" />

        <Button
            android:id="@+id/admin_delete_student_button"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:padding="10dp"
            android:text="@string/delete_student_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/admin_add_student_button"
            app:layout_constraintTop_toBottomOf="@+id/admin_update_info_button" />

        <TextView
            android:id="@+id/admin_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/administration_area_text"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/admin_logout_button"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginBottom="64dp"
            android:padding="10dp"
            android:text="@string/logout_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <FrameLayout
            android:id="@+id/admin_popup_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>