<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsFragment">


        <TextView
            android:id="@+id/settings_delete_acc_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/delete_account_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/settings_delete_acc_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_reset_password_text" />

        <TextView
            android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="42dp"
            android:text="@string/settings_text"
            android:textSize="48sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_toggle_dark_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:text="@string/toggle_dark_mode_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/settings_toggle_dark_switch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_title" />

        <TextView
            android:id="@+id/settings_reset_password_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/reset_password_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/settings_reset_password_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_toggle_dark_text" />

        <Button
            android:id="@+id/settings_reset_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="16dp"
            android:text="@string/reset_text"
            app:layout_constraintBottom_toTopOf="@+id/settings_delete_acc_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_reset_password_text"
            app:layout_constraintTop_toBottomOf="@+id/settings_toggle_dark_switch" />

        <Button
            android:id="@+id/settings_delete_acc_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="80dp"
            android:text="@string/delete_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_delete_acc_text"
            app:layout_constraintTop_toBottomOf="@+id/settings_reset_password_button" />

        <ImageButton
            android:id="@+id/settings_close_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/baseline_close_24"
            android:contentDescription="@string/image_of_close_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/settings_toggle_dark_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="80dp"
            android:text="@string/disabled_text"
            app:layout_constraintBottom_toTopOf="@+id/settings_reset_password_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_toggle_dark_text"
            app:layout_constraintTop_toBottomOf="@+id/settings_title" />

        <androidx.cardview.widget.CardView
            android:id="@+id/settings_delete_acc_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            app:cardCornerRadius="35dp"
            app:cardElevation="9dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/settings_delete_acc_constraint"
                style="@style/POPUPS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/settings_delete_acc_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:text="@string/are_you_sure_you_want_to_delete_your_account_text"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/settings_delete_acc_no_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/no_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/settings_delete_acc_yes_button"
                    app:layout_constraintTop_toBottomOf="@+id/settings_delete_acc_title" />

                <Button
                    android:id="@+id/settings_delete_acc_yes_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/yes_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/settings_delete_acc_no_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settings_delete_acc_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/settings_reset_password_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            app:cardCornerRadius="30dp"
            app:cardElevation="9dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/settings_reset_password_constraint"
                style="@style/POPUPS"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/settings_reset_password_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/reset_your_password_text"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/settings_reset_password_old_input"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/settings_reset_password_new_input"
                    style="@style/TEXT_INPUT_OUTLINE"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="32dp"
                    android:ems="10"
                    android:hint="@string/new_password_text"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    app:layout_constraintBottom_toTopOf="@+id/settings_reset_password_confirm_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settings_reset_password_old_input" />

                <EditText
                    android:id="@+id/settings_reset_password_old_input"
                    style="@style/TEXT_INPUT_OUTLINE"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:ems="10"
                    android:hint="@string/old_password_text"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    app:layout_constraintBottom_toTopOf="@+id/settings_reset_password_new_input"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settings_reset_password_title" />

                <Button
                    android:id="@+id/settings_reset_password_confirm_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/confirm_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settings_reset_password_new_input" />

                <ImageButton
                    android:id="@+id/settings_reset_password_cancel_button"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/baseline_close_24"
                    android:contentDescription="@string/image_of_close_button_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>