<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStudentFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/admin_add_student_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        app:cardElevation="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/admin_add_student_constraint"
            style="@style/POPUPS"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/admin_add_student_back_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/ic_arrow_back"
                android:contentDescription="@string/image_of_back_button_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

            <TextView
                android:id="@+id/admin_add_student_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="70dp"
                android:layout_marginBottom="24dp"
                android:text="@string/add_a_new_student_text"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/admin_add_student_firstname_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/admin_add_student_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:text="@string/add_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/admin_add_student_password_input" />

            <EditText
                android:id="@+id/admin_add_student_firstname_input"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:autofillHints="name"
                android:padding="10dp"
                android:importantForAutofill="yes"
                style="@style/TEXT_INPUT_OUTLINE"
                android:ems="10"
                android:hint="@string/first_name_text"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/admin_add_student_surname_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/admin_add_student_title" />

            <EditText
                android:id="@+id/admin_add_student_surname_input"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:importantForAutofill="yes"
                android:autofillHints="name"
                android:padding="10dp"
                style="@style/TEXT_INPUT_OUTLINE"
                android:ems="10"
                android:hint="@string/surname_text"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/admin_add_student_email_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/admin_add_student_firstname_input" />

            <EditText
                android:id="@+id/admin_add_student_email_input"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:autofillHints="emailAddress"
                android:importantForAutofill="yes"
                android:padding="10dp"
                style="@style/TEXT_INPUT_OUTLINE"
                android:ems="10"
                android:hint="@string/email_text"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/admin_add_student_dob_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/admin_add_student_surname_input" />

            <EditText
                android:id="@+id/admin_add_student_password_input"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:importantForAutofill="no"
                android:padding="10dp"
                style="@style/TEXT_INPUT_OUTLINE"
                android:ems="10"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/admin_add_student_add_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/admin_add_student_dob_button" />

            <TextView
                android:id="@+id/admin_add_student_dob_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/date_of_birth_text"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/admin_add_student_dob_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/admin_add_student_email_input" />

            <Button
                android:id="@+id/admin_add_student_dob_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/select_date_text"
                app:layout_constraintBottom_toTopOf="@+id/admin_add_student_password_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/admin_add_student_dob_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>