<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DeleteStudentFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/admin_delete_student_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="30dp"
            app:cardElevation="9dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/admin_delete_student_constraint"
                style="@style/POPUPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/admin_delete_student_back_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/ic_arrow_back"
                    android:contentDescription="@string/image_of_back_button_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/admin_delete_student_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="24dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/delete_a_student_text"
                    app:layout_constraintBottom_toTopOf="@+id/admin_delete_student_id"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/admin_delete_student_delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/delete_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/admin_delete_student_id" />

                <EditText
                    android:id="@+id/admin_delete_student_id"
                    style="@style/TEXT_INPUT_OUTLINE"
                    android:importantForAutofill="no"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="24dp"
                    android:ems="10"
                    android:hint="@string/student_id_text"
                    android:inputType="number"
                    android:padding="10dp"
                    app:layout_constraintBottom_toTopOf="@+id/admin_delete_student_delete_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/admin_delete_student_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>